--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -6,6 +6,7 @@
 .App-header {
   display: flex;
   flex-basis: 100%;
+  justify-content: space-between;
   background-color: #222;
   height: 150px;
   padding: 20px;
@@ -14,8 +15,10 @@
 }
 
 .App-title {
-  margin: auto;
-  font-size: 2rem;
+  font-size: 4rem;
+  flex-basis: 80%;
+  align-self: center;
+  text-align: center;
 }
 
 .App-content {
